--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,3 +7,33 @@
     --cordestaque01: #FF934F;
     --cordestaque02: #912F56;
 }
+
+*{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html{
+    background-color: var(--cordestaque02);
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#Ilogin{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: var(--corbranco);
+    border-radius: 10px;
+    height: 500px;
+    width: 250px;
+}
