--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,7 +33,6 @@ section#Ilogin{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
     overflow: hidden;
 
     background-color: var(--corbranco);
@@ -42,7 +41,8 @@ section#Ilogin{
 
     height: 500px;
     width: 250px;
-
+    
+    transform: translate(-50%,-50%);
     transition: width 0.2s, height 0.2s;
     transition-timing-function: ease;
 }
@@ -78,11 +78,34 @@ form > div.campo{
     width: 100%;
     height: 30px;
     border-radius: 5px;
+    border: 1px solid var(--cordestaque02);
     margin: 5px 0px;
 }
 
+
 form > div.campo > label{
     display: none;
+}
+
+div.campo > span.material-symbols-outlined{
+    color: var(--corbranco);
+    font-size: 2em;
+    width: 30px;
+}
+
+div.campo > input{
+    background-color: #fadcca;
+    font-size: 1em;
+    
+    height: 100%;
+    width: calc(100% - 35px);
+    border: none;
+    border-radius: 0px 5px 5px 0px;
+    transform: translateY(-11.5px);
+}
+
+div.campo > input:focus-within{
+    background-color: var(--corbranco);
 }
 
 form > input[type=submit]{
@@ -95,11 +118,13 @@ form > input[type=submit]{
     font-size: 1em;
     height: 30px;
     width: 100%;
+    
 }
 
 form > input[type=submit]:hover{
     background-color: var(--corescura);
 }
+
 
 form > a.button{
     display: block;
@@ -108,8 +133,7 @@ form > a.button{
     color: var(--corescura);
     font-size: 1em;
     font-weight: bold;
-    
-    margin-top: 5px;
+
     padding: 5px;
     text-align: center;
     text-decoration: none;
