--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -21,8 +21,7 @@
         width: 60%;
     }
 
-    form > a.button, form > input[type=submit]{
-        margin-top: 5px;
+    div#submit > a.button, div#submit > input[type=submit]{
         display: inline-block;
         width: 45%;
     }
@@ -30,7 +29,7 @@
 
 @media screen and (min-width: 993px) {
     body{
-        background-image: linear-gradient(to top, var(--cordestaque01), var(--cordestaque02));
+        background-image: linear-gradient(45deg, var(--cordestaque01), var(--cordestaque02));
     }
     
     section#Ilogin{
@@ -54,11 +53,10 @@
     }
 
     section#Ilogin > div#Iform > p{
-        font-size: 1.2em;
+        font-size: 1em;
     }
 
-    form > a.button, form > input[type=submit]{
-        margin-top: 5px;
+    div#submit > a.button, div#submit > input[type=submit]{
         display: inline-block;
         width: 45%;
     }
